--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>¡Bienvenido a Cineverse Perú!</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet" />
+
   <style>
     @keyframes rotate {
       100% {
