--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
   </style>
 </head>
 
-<body>
+<body class="body">
   <section class="loader" id="loader">
     <div class="loader__spinner"></div>
   </section>
