Update public index.html & layout CinemasLayout

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
     <div class="loader__spinner"></div>
   </section>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" class="root"></div>
   <script>
     window.addEventListener('load', () => {
       document.getElementById('loader').classList.add('loader--hidden');
