--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,16 @@
       --secondary-text-color: #000000;
       --tertiary-text-color: #0d1f40;
       --quaternary-text-color: #0d1f40bf;
+      --quinary-text-color: #bbb;
       --primary-shadow-color: #00000080;
       --secondary-shadow-color: #0000001a;
-      --primary-highlight-color: #0050b280;
+      --tertiary-shadow-color: #083c7580;
+      --primary-highlight-color: #0050b2;
       --secondary-highlight-color: #e50246;
-      --tertiary-highlight-color: #083c7580;
-      --quaternary-highlight-color: #d1485f;
+      --tertiary-highlight-color: #00397f;
+      /* --quaternary-highlight-color: #d1485f; */
+      --quaternary-highlight-color: #b20237;
+      --padding-section: 3rem 0;
       --padding-container: 0 1rem;
       --max-width-container: 1024px;
       --secondary-border-radius: 1rem;
@@ -59,9 +63,10 @@
       --secondary-text-color: #fff;
       --tertiary-text-color: #bebebe;
       --quaternary-text-color: #888;
+      --quinary-text-color: #555;
       --primary-shadow-color: #8888;
       --secondary-shadow-color: #eee8;
-      --inverse-secondary-text-color: #000;
+      --tertiary-shadow-color: #0088ff80;
       --inverse-primary-text-color: #282c34;
       --inverse-secondary-text-color: #000;
       --inverse-tertiary-text-color: #222;
@@ -113,6 +118,7 @@
 
     @media (min-width: 854px) {
       :root {
+        --padding-section: 4rem 0;
         --padding-container: 0 0.75em;
       }
     }
