Update styles _mixins.scss button

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,11 @@
       --tertiary-highlight-color: #00397f;
       /* --quaternary-highlight-color: #d1485f; */
       --quaternary-highlight-color: #b20237;
+      --primary-button-color: #0050b2;
+      --secondary-button-color: #e50246;
+      --primary-button-text-color: #fff;
+      --primary-active-button-color: #00397f;
+      --secondary-active-button-color: #b20237;
       --padding-section: 3rem 0;
       --padding-container: 0 1rem;
       --max-width-container: 1024px;
