--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
     }
 
     .body {
+      background-color: var(--primary-theme-color);
+      color: var(--primary-text-color);
       font-family: 'Lato', sans-serif;
       margin: 0;
     }
