--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
       color: var(--primary-text-color);
       font-family: 'Lato', sans-serif;
       margin: 0;
+      transition: var(--secondary-all-transitions);
     }
 
     .body--dark {
