--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
       --padding-container: 0 1rem;
       --max-width-container: 1024px;
       --primary-border-radius: 1rem;
+      --secondary-border-radius: 0.5rem;
       --primary-all-transitions: all 0.25s;
       --secondary-all-transitions: all 0.5s;
       --inverse-primary-text-color: #f5f5f5;
