Update public index.html variables

--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,8 @@
       --primary-shadow-color: #00000080;
       --secondary-shadow-color: #0000001a;
       --tertiary-shadow-color: #083c7580;
-      /* --primary-highlight-color: #0050b2; */
-      /* --secondary-highlight-color: #e50246; */
-      /* --tertiary-highlight-color: #00397f; */
-      /* --quaternary-highlight-color: #b20237; */
+      --primary-highlight-color: #0050b2;
+      --secondary-highlight-color: #e50246;
       --primary-button-color: #0050b2;
       --secondary-button-color: #e50246;
       --primary-button-text-color: #fff;
