--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
       --primary-button-text-color: #fff;
       --primary-active-button-color: #00397f;
       --secondary-active-button-color: #b20237;
+      --inverse-primary-text-color: #f5f5f5;
+      --inverse-secondary-text-color: #fff;
+      --inverse-tertiary-text-color: #dedfe3;
       --padding-section: 3rem 0;
       --padding-container: 0 1rem;
       --max-width-container: 1024px;
@@ -49,15 +52,14 @@
       --secondary-border-radius: 0.5rem;
       --primary-all-transitions: all 0.25s;
       --secondary-all-transitions: all 0.5s;
-      --inverse-primary-text-color: #f5f5f5;
-      --inverse-secondary-text-color: #fff;
-      --inverse-tertiary-text-color: #dedfe3;
+      --primary-font-family: 'Lato', sans-serif;
+      --secondary-font-family: 'Montserrat', sans-serif;
     }
 
     .body {
       background-color: var(--primary-theme-color);
       color: var(--primary-text-color);
-      font-family: 'Lato', sans-serif;
+      font-family: var(--primary-font-family);
       margin: 0;
       transition: var(--secondary-all-transitions);
     }
