Update public index.html variables

--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,8 @@
       --tertiary-text-color: #bebebe;
       --quaternary-text-color: #888;
       --quinary-text-color: #555;
-      --primary-shadow-color: #8888;
-      --secondary-shadow-color: #eee8;
+      --primary-shadow-color: #fff8;
+      --secondary-shadow-color: #ffffff1a;
       --tertiary-shadow-color: #0088ff80;
       --inverse-primary-text-color: #282c34;
       --inverse-secondary-text-color: #000;
