Update component AuthenticationRegisterForm yup

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       --tertiary-text-color: #0d1f40;
       --quaternary-text-color: #0d1f40bf;
       --quinary-text-color: #bbb;
+      --primary-invalid-text-color: #e50246;
       --primary-shadow-color: #00000080;
       --secondary-shadow-color: #0000001a;
       --tertiary-shadow-color: #083c7580;
